# dndcharactersheet

./: .gitignore  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
app/layouts/: default.vue
app/pages/: index.vue
assets/css/: main.css
components/: AbilitiesColumn.vue  AbilitiesEditModal.vue  AbilitiesSection.vue  ActionsSection.vue  BackgroundSection.vue  CharacterEditModal.vue  CharacterHeader.vue  CharacterInfoHeader.vue  CharacterSheet.vue  CombatColumn.vue  CombatStats.vue  DeathSavesSection.vue  DiceHistoryModal.vue  EquipmentModal.vue  FeatChoiceModal.vue  FeatSelectionModal.vue  FeatsSection.vue  FeaturesTraitsSection.vue  HPEditModal.vue  HitDiceSection.vue  HitPointsCompact.vue  InventorySection.vue  LevelUpModal.vue  MenuBar.vue  NewCharacterModal.vue  OriginSelectionModal.vue  OriginsSection.vue  PersonalityColumn.vue  SkillsSection.vue  SpeciesChoiceModal.vue  SpeciesSection.vue  SpeciesSelectionModal.vue  SpellManagementModal.vue  SpellsSection.vue  Toast.vue  XPEditModal.vue
composables/: classProgression.ts  spellSlots.ts  useCharacter.ts  useDiceHistory.ts  xpProgression.ts
data/: class-progression.json  feats.json  fighting-styles.json  origins.json  species.json
data/class-progression/: Barbarian.json  Bard.json  Cleric.json  Fighter.json  Paladin.json  README.txt  Rogue.json  Sorcerer.json  index.ts
data/spells/: Cleric.json  Paladin.json
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
types/: character.ts
